fix wrong aluno spacing

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -238,11 +238,11 @@
         }
 
         .nomeAluno {
-          right: 35px;
+          right: 45px;
         }
 
         .nascAluno {
-          right: 20px;
+          right: 10px;
         }
 
         .ativoAluno {
@@ -254,6 +254,10 @@
         .raAluno {
           right: 60px;
         }
+
+        .nomeAluno {
+          right: 53px;
+        }
       }
 
       @media (min-width: 1600px) {
@@ -262,7 +266,7 @@
         }
 
         .nomeAluno {
-          right: 55px;
+          right: 70px;
         }
 
         .ativoAluno {
@@ -276,11 +280,11 @@
         }
 
         .nomeAluno {
-          right: 85px;
+          right: 100px;
         }
 
         .nascAluno {
-          right: 35px
+          right: 20px
         }
 
         .ativoAluno {
